# backend

./: .coverage  .env.template  .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pr.yml
app/: admin.py  api.py  api_test.py  context_processors.py  endpoints.md  factories.py  models.py  schema.py  views.py
app/management/commands/: rename_default_site.py
sample/: asgi.py  config.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  managers.py  middleware.py  models.py
users/migrations/: 0001_initial.py  0002_request.py
